fix: disable overflowing horizontal scroll on mobile viewports

--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 h1,
